# imagetotext

./: .gitignore  Dockerfile  download_language_models.py  main.py  pyproject.toml  start.sh  translator.py
.github/workflows/: deploy_to_heroku.yaml  dokku.yml
data/: Instructions.md
