[tool.poetry]
name = "gettextservice"
version = "0.1.0"
description = "This is a service to output text from image"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytesseract = "^0.3.6"
fastapi = "^0.62.0"
numpy = "^1.19.4"
python-multipart = "^0.0.5"
uvicorn = "^0.13.1"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
